--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
-name = "pxtone"
+name = "pxtn"
 version = "0.1.0"
 authors = ["petamoriken <moriken@kimamass.com>"]
+edition = "2018"
+publish = false
+
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
-lazy_static = "1.0.0"
-num-derive = "0.2.0"
-num-traits = "0.2.2"
-byteorder = "1.2.1"
+byteorder = "1.3.1"
+num-traits = "0.2.6"
+num-derive = "0.2.4"
